@@ -8,6 +8,7 @@ Version 1.0.12 to be released
 - Bug #740: CDbCriteria::addColumnCondition() should handle NULL parameter correctly (Qiang)
 - Bug #742: CEmailValidator should allow upper case email addresses (Qiang)
 - Bug #801: CCaptcha allows unlimited tests if the CAPTCHA image is not reloaded (Qiang)
+- Bug: CVarDumper sometimes doesn't dump object value correctly (Qiang)
 - Bug: COciSchema::findTableNames() should use upper case for the keys of query results (Qiang)
 - Enh #730: Relational queries now respect changes made to CActiveRecord::dbCriteria in the onBeforeFind event (Qiang)
 - Enh #737: CUrlManager::createUrl() now supports multidimensional array params (Jonah)
